--- a/index.html
+++ b/index.html
@@ -1,24 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Perguillo Anuarios</title>
 </head>
 <body>
-    <div class="anuario">
-        <div class="pagina">
-            <h1>Contenido de la página 1</h1>
-            <img src="gorroconpajaro.png" alt="imagen1">
-        </div>
+   
+    
 
-        <div class="pagina">
-            <h1>Contenido de la página 2</h1>
-            <img src="perguillo con regalo.png" alt="imagen1">
-        </div>        
-    </div>
-    <div class="controles">
-        <button id="anterior">Anterior</button>
-        <button id="siguiente">Siguiente</button>
-    </div>
-    <script src="script.js"></script>
 </body>
 </html>
