--- a/index.html
+++ b/index.html
@@ -3,11 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Perguillo Anuarios</title>
 </head>
 <body>
    
-    
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    Inicio
+                </li>
+                <li>
+                    Nosotros
+                </li>
+                <li>
+                    Categorias
+                </li>
+                <li>
+                    Estilos
+                </li>
+            </ul>
+        </nav>
+    </header>
 
 </body>
 </html>
