--- a/prueba/index-prueba.html
+++ b/prueba/index-prueba.html
@@ -20,5 +20,10 @@
         <button id="siguiente">Siguiente</button>
     </div>
     <script src="script.js"></script>
+    <form action="">
+        <table>
+            <h1>Leonardo</h1>
+        </table>
+    </form>
 </body>
 </html>
