--- a/prueba/index-prueba.html
+++ b/prueba/index-prueba.html
@@ -22,7 +22,7 @@
     <script src="script.js"></script>
     <form action="">
         <table>
-            <h1>Leonardo</h1>
+            <h1>Leonardo paypay</h1>
         </table>
     </form>
 </body>
