--- a/index.html
+++ b/index.html
@@ -4,29 +4,74 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="header.js"></script>
     <title>Perguillo Anuarios</title>
 </head>
 <body>
    
-    <header>
-        <nav>
-            <ul>
-                <li>
-                    Inicio
-                </li>
-                <li>
-                    Nosotros
-                </li>
-                <li>
-                    Categorias
-                </li>
-                <li>
-                    Estilos
-                </li>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, quae. Amet explicabo nam doloribus praesentium officia magnam maxime quos dolores fugit quia corporis, aspernatur laborum est ipsum, doloremque nihil reprehenderit!
-            </ul>
-        </nav>
+    <header class="">
+        <div class="wrapper">
+             
+            <img class="logo" src="Perguillo horizontal.jpg" alt="">
+                 <nav>
+                    <a href="#">Inicio</a>
+                    <a href="#">Nosotros</a>
+                    <a href="#">Categorias</a>
+                    <a href="#">Estilos</a>
+                </nav>
+        </div>
     </header>
+    <div class="imagen1">
+        <h1 class="texto1">ELIGE TU ANUARIO!!!</h1>
+
+    </div>
+
+    <section class="contenido1 wrapper">
+        <p>orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+            orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+            when an unknown printer took a galley of type and scrambled it to make a type
+            orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+            when an unknown printer took a galley of type and scrambled it to make a type
+            when an unknown printer took a galley of type and scrambled it to make a type
+        </p>
+        <br>
+        <p>orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+            orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+            when an unknown printer took a galley of type and scrambled it to make a type
+            orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+            when an unknown printer took a galley of type and scrambled it to make a type
+            when an unknown printer took a galley of type and scrambled it to make a type
+        </p>
+        <br>
+        <p>orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+            orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+            when an unknown printer took a galley of type and scrambled it to make a type
+            orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+            when an unknown printer took a galley of type and scrambled it to make a type
+            when an unknown printer took a galley of type and scrambled it to make a type
+        </p>
+        <br>
+        <p>orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+            orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+            when an unknown printer took a galley of type and scrambled it to make a type
+            orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+            when an unknown printer took a galley of type and scrambled it to make a type
+            when an unknown printer took a galley of type and scrambled it to make a type
+        </p>
+        <br>
+        <p>orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+            orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+            when an unknown printer took a galley of type and scrambled it to make a type
+            orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+            when an unknown printer took a galley of type and scrambled it to make a type
+            when an unknown printer took a galley of type and scrambled it to make a type
+        </p>
+        <br>
+
+
+
+    </section>
 
 </body>
 </html>
