--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="header.js"></script>
+    <script src="src/scripts/header.js"></script>
     <title>Perguillo Anuarios</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
     <header class="">
         <div class="wrapper">
              
-            <img class="logo" src="Perguillo horizontal.jpg" alt="">
+            <img class="logo" src="src/img/Perguillo horizontal.jpg" alt="">
                  <nav>
                     <a href="#">Inicio</a>
                     <a href="#">Nosotros</a>
