--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="src/styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap" rel="stylesheet">
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="src/scripts/header.js"></script>
+    <script src="src/scripts/slider.js" ></script>
     <title>Perguillo Anuarios</title>
 </head>
 <body>
-   
+<!-- header -->
     <header class="">
         <div class="wrapper">
              
@@ -22,13 +26,56 @@
                 </nav>
         </div>
     </header>
+
+<!-- banner -->
     <div class="imagen1">
         <h1 class="texto1">ELIGE TU ANUARIO!!!</h1>
-
     </div>
 
+<!--contenido  -->
     <section class="contenido1 wrapper">
-        <p>orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+
+            <div class="tarjeta">
+                <!-- Targeta tiene 2 elementos, la imagen y el texto -->
+                <div class="textotarjeta">
+                    <p>
+                        <h2>¿ANUARIO DIGITAL?</h2>
+                        <br>
+                        orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                        orem Ipsum has been the industry's standard dummy text ever since the 1500s,                        
+                        </p>  
+                </div>
+
+                <div class="imagenTarjeta"></div>     
+            </div>
+                    
+        <div class="populares">
+
+            <h2>MÁS POPULARES</h2>
+
+            <div class="lista">
+                <button class="botonA"><</button>
+                <ul class="slider">
+                    <li class="objetos-slider" >
+                        <a href="#"><img src="src/img/mas popular.jpg" alt=""></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/img/mas popular.jpg" alt=""></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/img/mas popular.jpg" alt=""></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/img/mas popular.jpg" alt=""></a>
+                    </li>
+                </ul>
+                <button class="botonAt">></button>
+            </div>
+
+        </div>
+        <br>
+        <p>
+            orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
             orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
             when an unknown printer took a galley of type and scrambled it to make a type
             orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
@@ -36,7 +83,8 @@
             when an unknown printer took a galley of type and scrambled it to make a type
         </p>
         <br>
-        <p>orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+        <p>
+            orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
             orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
             when an unknown printer took a galley of type and scrambled it to make a type
             orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
@@ -44,23 +92,8 @@
             when an unknown printer took a galley of type and scrambled it to make a type
         </p>
         <br>
-        <p>orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+        <p>
             orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-            when an unknown printer took a galley of type and scrambled it to make a type
-            orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-            when an unknown printer took a galley of type and scrambled it to make a type
-            when an unknown printer took a galley of type and scrambled it to make a type
-        </p>
-        <br>
-        <p>orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-            orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-            when an unknown printer took a galley of type and scrambled it to make a type
-            orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-            when an unknown printer took a galley of type and scrambled it to make a type
-            when an unknown printer took a galley of type and scrambled it to make a type
-        </p>
-        <br>
-        <p>orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
             orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
             when an unknown printer took a galley of type and scrambled it to make a type
             orem Ipsum has been the industry's standard dummy text ever since the 1500s, 
