--- a/index.html
+++ b/index.html
@@ -53,23 +53,23 @@
 
             <h2>MÁS POPULARES</h2>
 
-            <div class="lista">
-                <button class="botonA"><</button>
-                <ul class="slider">
-                    <li class="objetos-slider" >
-                        <a href="#"><img src="src/img/mas popular.jpg" alt=""></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="src/img/mas popular.jpg" alt=""></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="src/img/mas popular.jpg" alt=""></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="src/img/mas popular.jpg" alt=""></a>
-                    </li>
-                </ul>
-                <button class="botonAt">></button>
+            <div class="carrusel-list" id="carrusel-list">
+                <button class="adelante" ><</button>
+
+                <div class="carrusel-track" id="track">
+                    
+                    <div class="carrusel">
+                        <a href=""><img src="src/img/mas popular.jpg" alt=""></a>
+                    </div>
+                    <div class="carrusel">
+                        <a href=""><img src="src/img/mas popular.jpg" alt=""></a>
+                    </div>
+                    <div class="carrusel">
+                        <a href=""><img src="src/img/mas popular.jpg" alt=""></a>
+                    </div>
+
+                </div>  
+                <button class="atras" >></button>              
             </div>
 
         </div>
