--- a/nosotros.html
+++ b/nosotros.html
@@ -36,29 +36,20 @@
         </div>          
 
         <div class="contenido">
-            
-            <h2>Nuestros Valores</h2>
-            <ul>
-                <li>Lorem, ipsum dolor sit amet consectetur
-                    <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, temporibus. Laborum obcaecati rem commodi, voluptates quasi 
-                    </p>
-                </li>                
-                <li>Lorem, ipsum dolor sit amet consectetur
-                    <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, temporibus. Laborum obcaecati rem commodi, voluptates quasi 
-                    </p>
-                </li>                <li>Lorem, ipsum dolor sit amet consectetur
-                    <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, temporibus. Laborum obcaecati rem commodi, voluptates quasi 
-                    </p>
-                </li>                <li>Lorem, ipsum dolor sit amet consectetur
-                    <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, temporibus. Laborum obcaecati rem commodi, voluptates quasi 
-                    </p>
-                </li>                
-            </ul>
-
+            <div class="texto">
+                <ul>
+                    <li class="valores">Nuestros valores
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit</p>
+                    </li>
+                    <li class="mision">Nuestra mision
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit</p>
+                    </li>
+                    <li class="vision">nuestra vision
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit</p>
+                    </li>
+                </ul>
+            </div>
+                          
         </div>
     </section>
 
