--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap" rel="stylesheet">
     <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="src/scripts/header.js"></script>
+    
     <script src="src/scripts/slider.js" ></script>
     <title>Perguillo Anuarios</title>
 </head>
@@ -19,9 +19,9 @@
              
             <img class="logo" src="src/img/Perguillo horizontal.jpg" alt="">
                  <nav>
-                    <a href="#">Inicio</a>
+                    <a href="index.html">Inicio</a>
                     <a href="#">Nosotros</a>
-                    <a href="#">Categorias</a>
+                    <a href="categorias.html">Categorias</a>
                     <a href="#">Estilos</a>
                 </nav>
         </div>
@@ -54,7 +54,7 @@
             <h2>MÁS POPULARES</h2>
 
             <div class="lista">
-                <button class="botonA"><</button>
+                <button class="botonA"></button>
                 <ul class="slider">
                     <li class="objetos-slider" >
                         <a href="#"><img src="src/img/mas popular.jpg" alt=""></a>
