--- a/index.html
+++ b/index.html
@@ -101,6 +101,37 @@
        
     </section>
 
+    <!--Footer-->
+<footer>
+    <div class="wrapper">
+        <div class="footer-columns">
+            <div class="column">
+                <!-- Columna 1 - Logo -->
+                <img class="footer-logo" src="src/img/Perguillo horizontal.webp" alt="Logo de Perguillo">
+            </div>
+            <div class="column">
+                <!-- Columna 2 - Nuestros Productos -->
+                <h2>Productos</h2>
+                <p>Descripción de los productos y servicios que ofrecemos.</p>
+            </div>
+            <div class="column">
+                <!-- Columna 3 - Contacto -->
+                <h2>Contacto</h2>
+                <p>Información de contacto, dirección, correo electrónico, teléfono, etc.</p>
+            </div>
+            <div class="column">
+                <!-- Columna 4 - Redes Sociales -->
+                <h2>Redes Sociales</h2>
+                <ul class="social-icons">
+                    <li><a href="#"><img src="facebook.png" alt="Facebook"></a></li>
+                    <li><a href="#"><img src="twitter.png" alt="Twitter"></a></li>
+                    <li><a href="#"><img src="instagram.png" alt="Instagram"></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
+
 </body>
 <script src="src/scripts/slider.js" ></script>
 </html>
