--- a/nosotros.html
+++ b/nosotros.html
@@ -25,7 +25,7 @@
                     <a href="index.html">Inicio</a>
                     <a href="#">Nosotros</a>
                     <a href="categorias.html">Categorias</a>
-                    <a href="estilos.html">Estilos</a>
+                    <a href="contactos.html">contactos</a>
                 </nav>
         </div>
     </header>
