--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a href="#">Inicio</a>
                     <a href="nosotros.html">Nosotros</a>
                     <a href="categorias.html">Categorias</a>
-                    <a href="estilos.html">Estilos</a>
+                    <a href="contactos.html">contactos</a>
                 </nav>
         </div>
     </header>
