--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
              
             <img class="logo" src="src/img/Perguillo horizontal.jpg" alt="">
                  <nav>
-                    <a href="#">Inicio</a>
+                    <a href="indexo.html">Inicio</a>
                     <a href="nosotros.html">Nosotros</a>
                     <a href="categorias.html">Categorias</a>
                     <a href="contactos.html">contactos</a>
