--- a/nosotros.html
+++ b/nosotros.html
@@ -45,7 +45,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit</p>
                     </li>
                     <li class="vision">nuestra vision
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit</p>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elitp</p>
                     </li>
                 </ul>
             </div>
