--- a/categorias.html
+++ b/categorias.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="src/styles/stylesCategoria.css">
+    <link rel="stylesheet" href="src/styles/contacto.css">
+    <link rel="stylesheet" href="src/styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +22,6 @@
             <img class="logo" src="src/img/Perguillo horizontal.jpg" alt="">
                  <nav>
                     <a href="index.html">Inicio</a>
-
                     <a href="nosotros.html">Nosotros</a>
                     <a href="categorias.html">Categorias</a>
                     <a href="contactos.html">contactos</a>
@@ -152,5 +153,36 @@
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+
+  <footer>
+    <div class="wrapper">
+        <div class="footer-columns">
+            <div class="column">
+                <!-- Columna 1 - Logo -->
+                <img class="footer-logo" src="src/img/Perguillo horizontal.webp" alt="Logo de Perguillo">
+            </div>
+            <div class="column">
+                <!-- Columna 2 - Nuestros Productos -->
+                <h2>Productos</h2>
+                <p>Descripción de los productos y servicios que ofrecemos.</p>
+            </div>
+            <div class="column">
+                <!-- Columna 3 - Contacto -->
+                <h2>Contacto</h2>
+                <p>Información de contacto, dirección, correo electrónico, teléfono, etc.</p>
+            </div>
+            <div class="column">
+                <!-- Columna 4 - Redes Sociales -->
+                <h2>Redes Sociales</h2>
+                <ul class="social-icons">
+                    <li><a href="#"><img src="facebook.png" alt="Facebook"></a></li>
+                    <li><a href="#"><img src="twitter.png" alt="Twitter"></a></li>
+                    <li><a href="#"><img src="instagram.png" alt="Instagram"></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+  </footer>
+
 </body>
 </html>
