meti productos en las categorias

--- a/nosotros.html
+++ b/nosotros.html
@@ -23,8 +23,8 @@
             <img class="logo" src="src/img/Perguillo horizontal.jpg" alt="">
                  <nav>
                     <a href="index.html">Inicio</a>
-                    <a href="#">Nosotros</a>
                     <a href="categorias.html">Categorias</a>
+                    <a href="nosotros.html">Nosotros</a>                    
                     <a href="contactos.html">contactos</a>
                 </nav>
         </div>
@@ -41,10 +41,10 @@
                     <li class="valores">Nuestros valores
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit</p>
                     </li>
-                    <li class="mision">Nuestra mision
+                    <li class="mision">Nuestra vision
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit</p>
                     </li>
-                    <li class="vision">nuestra vision
+                    <li class="vision">nuestra mision
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit</p>
                     </li>
                 </ul>
@@ -52,6 +52,36 @@
                           
         </div>
     </section>
+
+    <footer>
+        <div class="wrapper">
+            <div class="footer-columns">
+                <div class="column">
+                    <!-- Columna 1 - Logo -->
+                    <img class="footer-logo" src="src/img/Perguillo horizontal.webp" alt="Logo de Perguillo">
+                </div>
+                <div class="column">
+                    <!-- Columna 2 - Nuestros Productos -->
+                    <h2>Productos</h2>
+                    <p>Descripción de los productos y servicios que ofrecemos.</p>
+                </div>
+                <div class="column">
+                    <!-- Columna 3 - Contacto -->
+                    <h2>Contacto</h2>
+                    <p>Información de contacto, dirección, correo electrónico, teléfono, etc.</p>
+                </div>
+                <div class="column">
+                    <!-- Columna 4 - Redes Sociales -->
+                    <h2>Redes Sociales</h2>
+                    <ul class="social-icons">
+                        <li><a href="#"><img src="facebook.png" alt="Facebook"></a></li>
+                        <li><a href="#"><img src="twitter.png" alt="Twitter"></a></li>
+                        <li><a href="#"><img src="instagram.png" alt="Instagram"></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 </body>
 </html>
