--- a/contactos.html
+++ b/contactos.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <link rel="stylesheet" href="src/styles/contacto.css">
+    
     <link rel="stylesheet" href="src/styles/styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap" rel="stylesheet">
+
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
     <!-- ... -->
 </head>
@@ -12,9 +17,9 @@
              
             <img class="logo" src="src/img/Perguillo horizontal.jpg" alt="">
                  <nav>
-                    <a href="#">Inicio</a>
-                    <a href="nosotros.html">Nosotros</a>
+                    <a href="index.html">Inicio</a>
                     <a href="categorias.html">Categorias</a>
+                    <a href="nosotros.html">Nosotros</a>                    
                     <a href="contactos.html">contactos</a>
                 </nav>
         </div>
